<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools">

	 <data>

		  <variable
			   name="fragment"
			   type="com.promoclick.databindingcard.CardFrontFragment" />
	 </data>

	 <androidx.constraintlayout.widget.ConstraintLayout
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  tools:context=".CardFrontFragment">

		  <androidx.cardview.widget.CardView
			   android:id="@+id/linearLayout"
			   android:layout_width="match_parent"
			   android:layout_height="@dimen/card_height"
			   app:cardCornerRadius="20dp"
			   android:layout_margin="@dimen/activity_vertical_margin"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toTopOf="parent">

			   <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="@dimen/card_height"
					android:background="@drawable/ic_card_bg"
					android:orientation="horizontal">
					<androidx.constraintlayout.widget.ConstraintLayout
						 android:layout_width="match_parent"
						 android:layout_height="match_parent"
						 android:background="@color/dark_gray" />
			   </LinearLayout>
		  </androidx.cardview.widget.CardView>

		  <LinearLayout
			   android:elevation="2dp"
			   android:layout_width="0dp"
			   android:layout_height="0dp"
			   android:orientation="vertical"
			   android:paddingLeft="@dimen/activity_horizontal_margin"
			   app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
			   app:layout_constraintEnd_toEndOf="@+id/linearLayout"
			   app:layout_constraintStart_toStartOf="@+id/linearLayout"
			   app:layout_constraintTop_toTopOf="@+id/linearLayout">



			   <ImageView
					android:layout_width="@dimen/chip_width"
					android:layout_height="@dimen/chip_height"
					android:layout_marginTop="30dp"
					android:layout_marginBottom="@dimen/items_inbetween"
					android:src="@drawable/ic_chip" />

			   <TextView
					android:id="@+id/tv_card_number"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:text="@string/card_number_sample"
					android:textColor="@color/card_text_color"
					android:textSize="@dimen/header_text" />

			   <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<TextView
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_marginRight="@dimen/items_inbetween_small"
						 android:text="@string/card_validity_label"
						 android:textColor="@color/card_text_color"
						 android:textSize="@dimen/xsmall_text" />

					<TextView
						 android:id="@+id/tv_validity"
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:text="@string/card_validity_sample"
						 android:textColor="@color/card_text_color"
						 android:textSize="@dimen/xsmall_text" />

			   </LinearLayout>

			   <TextView
					android:id="@+id/tv_member_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:text="@string/card_name_sample"
					android:textAllCaps="true"
					android:textColor="@color/card_text_color"
					android:textSize="@dimen/medium_text" />

		  </LinearLayout>


	 </androidx.constraintlayout.widget.ConstraintLayout>
</layout>